@@ -115,10 +115,10 @@ SettingsManager::SettingsManager()
 	setDefault(CLEAR_SEARCH, true);
 	setDefault(SHARE_HIDDEN, false);
 	setDefault(FILTER_MESSAGES, true);
-	setDefault(MINIMIZE_TRAY, false);
+	setDefault(MINIMIZE_TRAY, true);
 	setDefault(AUTO_SEARCH, false);
 	setDefault(TIME_STAMPS, false);
-	setDefault(CONFIRM_EXIT, false);
+	setDefault(CONFIRM_EXIT, true);
 	setDefault(IGNORE_OFFLINE, false);
 	setDefault(POPUP_OFFLINE, false);
 	setDefault(LIST_DUPES, true);
@@ -382,5 +382,5 @@ void SettingsManager::save(string const& aFileName) {
 
 /**
  * @file
- * $Id: SettingsManager.cpp,v 1.123 2005/04/24 08:13:37 arnetheduck Exp $
+ * $Id: SettingsManager.cpp,v 1.124 2005/06/12 22:12:47 arnetheduck Exp $
  */
