@@ -1,3 +1,4 @@
+#!/usr/bin/python
 import re
 import codecs
 import xml.sax.saxutils
@@ -36,7 +37,7 @@ lre = re.compile('\s*(\w+),\s*//\s*\"(.+)\"\s*')
 decoder = codecs.getdecoder('cp1252')
 encoder = codecs.getencoder('utf8')
 recodeattr = lambda s: encoder(decoder(xml.sax.saxutils.quoteattr(s))[0])[0]
-recodeval = lambda s: encoder(decoder(xml.sax.saxutils.escape(s, {"\\t" : "\t"}))[0])[0]
+recodeval = lambda s: encoder(decoder(xml.sax.saxutils.escape(s.replace("\\\\","\\").replace("\\t","\t")))[0])[0]
 
 for x in file("client/StringDefs.h", "r"):
     if x.startswith("// @Strings: "):
